# web

./: .env_example  .ruff.toml  manage.py  pyproject.toml
.github/workflows/: ci.yml  ruff.yml
api/: settings.py
dev/: docker-compose.yml
paws_on_stream_web/: manage.py
paws_on_stream_web/core/: admin.py  factories.py  models.py  serializers.py  test_serializers.py  test_views.py  tests.py  views.py
paws_on_stream_web/core/migrations/: 0001_initial.py  0002_alter_displaydevice_location.py
paws_on_stream_web/participants/: admin.py  factories.py  models.py  serializers.py  test_serializers.py  test_views.py  tests.py  views.py
paws_on_stream_web/participants/migrations/: 0001_initial.py
paws_on_stream_web/paws_on_stream_web/: asgi.py  factories.py  settings.py  urls.py  wsgi.py
paws_on_stream_web/streaming/: admin.py  apps.py  factories.py  middleware.py  models.py  serializers.py  test_serializers.py  test_views.py  tests.py  views.py
paws_on_stream_web/streaming/migrations/: 0001_initial.py  0002_alter_event_display_mode_alter_message_media_type_and_more.py
