[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Bacher",email = "daniel.bacher@kit.edu"}
]
requires-python = "^3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
