[project]
name = "paws_on_stream_web"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Bacher",email = "daniel.bacher@kit.edu"}
]
requires-python = "^3.14"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "dj-database-url (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "factory-boy (>=3.3.3,<4.0.0)",
    "ruff (>=0.9.0,<1.0.0)"
]
